--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -122,6 +122,12 @@ The expected value of r is approximately 1. The result is not perfect, but still
  \caption{Convergence test for the FE scheme. The x axis is $\ln(\Delta t)$.}
  \label{convergence_test_FE}
 \end{figure}
+\begin{figure}[H]
+ \centering
+ \includegraphics[scale=0.7]{../doc/results/experiment_13012014_0925_Simple1DConvergenceTestBE/results/ConvergenceTest.eps}
+ \caption{Convergence test for the BE scheme. The x axis is $\ln(\Delta t)$, the y-axis (though a little hard to see) is zoomed in around r=1.}
+ \label{convergence_test_FE}
+\end{figure}
 
 
 
