mostly updates to pdf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -47,9 +47,9 @@
 
 \maketitle
 
-\begin{abstract}
-This is an abstract text.
-\end{abstract}
+% \begin{abstract}
+% This is an abstract text.
+% \end{abstract}
 
 % \begin{dedication}
 %   To someone
@@ -57,9 +57,9 @@ This is an abstract text.
 %   This is a dedication to my cat.
 % \end{dedication}
 
-\begin{acknowledgements}
-  I acknowledge my acknowledgements.
-\end{acknowledgements}
+% \begin{acknowledgements}
+%   I acknowledge my acknowledgements.
+% \end{acknowledgements}
 
 
 \tableofcontents
@@ -78,7 +78,13 @@ This is an abstract text.
 \chapter{Analysis}
 \include{analysis}
 
-% \chapter{Results}
+
+\chapter{Software}
+\include{software}
+
+
+\chapter{Results}
+\include{results}
 
 \appendix
 \chapter{}
