--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -3,114 +3,6 @@
 In this appendix some more tedious and rather boring, but no less important calculations can be found. 
 We will also list some algorithms that are important, but not quite in the scope of this thesis.
 
-\subsection{Alternate Direction Implicit scheme}
-Starting with the discretization in equation \ref{} we can find the entire linear problem for a $3\times3$ grid with the no-flux Neumann boundary conditions
-\begin{equation*}
- \frac{\d u}{\d n}|_{\d\Omega} = 0
-\end{equation*}
-which gives us $\frac{u^{n+1/2}-u^n}{\Delta t/2} = 0 \implies u^{n+1/2}=u^n$.
-The general discretization written out gives us
-\begin{align*}
- -\alpha u_{i+1,j}^{n+1/2} +(1+2\alpha)u_{i,j}^{n+1/2} -\alpha u_{i-1,j}^{n+1/2} &= -\beta u_{i,j+1}^{n}+(1-2\beta)u_{i,j}^{n} +\beta u_{i,j-1}^{n} \\
- -\beta u_{i,j+1}^{n+1} +(1+2\beta)u_{i,j}^{n+1} -\beta u_{i,j-1}^{n+1} &=\alpha u_{i+1,j}^{n+1/2} +(1-2\alpha)u_{i,j}^{n+1/2} +\alpha u_{i-1,j}^{n+1/2}
-\end{align*}
-Where 
-\begin{align*}
- \alpha = \frac{D\Delta t}{2(\Delta x)^2}\text{,}\; \beta = \frac{D\Delta t}{2(\Delta y)^2}
-\end{align*}
-Solving the two equations above on the mentioned $3\times3$ grid gives us 18 equations which in turn can be written as two tridiagonal linear equations if we rewrite the unknown matrices $u^{n+1/2}$ and $u^n$ as column vectors (see eqs. \ref{ADI_vectors_step1} and \ref{ADI_vectors_step2}). 
-
-\begin{align}
-  \left(\begin{array}{c c c c c c c c c}
-        1+2\alpha & -2\alpha &0 &0 &0 &0 &0 &0 &0\\
-        -\alpha & 1+2\alpha & -\alpha &0 &0 &0 &0 &0 &0\\
-        0& -2\alpha & 1+2\alpha & 0 & 0 & 0 &0&0&0\\
-        0& 0&0 & 1+2\alpha & -2\alpha & 0 & 0 &0&0\\
-        0& 0&0&-\alpha & 1+2\alpha & -\alpha & 0 & 0 &0\\
-        0& 0&0&0&-2\alpha & 1+2\alpha & 0 & 0 &0\\
-        0& 0 &0 &0 &0&0 & 1+2\alpha & -2\alpha&0\\
-        0& 0 &0 &0 &0&0&-\alpha & 1+2\alpha &-\alpha\\
-         0&0 &0 &0&0 &0&0&-2\alpha & 1+2\alpha
-       \end{array}\right)\mathbf{u}^{n+1/2} = \mathbf{f}
-\end{align}
-and
-\begin{align}
-  \left(\begin{array}{c c c c c c c c c}
-        1+2\beta & -2\beta &0 &0 &0 &0 &0 &0 &0\\
-        -\beta & 1+2\beta & -\beta &0 &0 &0 &0 &0 &0\\
-        0& -2\beta & 1+2\beta & 0 & 0 & 0 &0&0&0\\
-        0& 0&0 & 1+2\beta & -2\beta & 0 & 0 &0&0\\
-        0& 0&0&-\beta & 1+2\beta & -\beta & 0 & 0 &0\\
-        0& 0&0&0&-2\beta & 1+2\beta & 0 & 0 &0\\
-        0& 0 &0 &0 &0&0 & 1+2\beta & -2\beta&0\\
-        0& 0 &0 &0 &0&0&-\beta & 1+2\beta &-\beta\\
-         0&0 &0 &0&0 &0&0&-2\beta & 1+2\beta
-       \end{array}\right)\mathbf{u}^{n+1} = \mathbf{f}_2
-\end{align}
-The vectors $\mathbf{u}^{n+1/2}$, $\mathbf{f}$, $\mathbf{u}^{n+1}$ and $\mathbf{f}_2$ are shown in eqs. \ref{ADI_vectors_step1} and \ref{ADI_vectors_step2}
-\begin{align}
-  \mathbf{u}^{n+1/2} = 
-  \left(\begin{array}{c}
-        u^{n+1/2}_{0,0}\\u^{n+1/2}_{0,1}\\u^{n+1/2}_{0,2}\\
-        u^{n+1/2}_{1,0}\\u^{n+1/2}_{1,1}\\u^{n+1/2}_{1,2}\\
-        u^{n+1/2}_{2,0}\\u^{n+1/2}_{2,1}\\u^{n+1/2}_{2,2}
-       \end{array}\right)\text{,}\;
- \mathbf{f} = 
-  \left(\begin{array}{c}
-        (1-2\beta)u^{n}_{0,0}+2\beta u^{n}_{0,1}\\ \beta u^{n}_{0,0}+ (1-2\beta)u^{n}_{0,1}+\beta u^{n}_{0,2} \\(1-2\beta)u^{n}_{0,2}+2\beta u^{n}_{0,1}\\
-        (1-2\beta)u^{n}_{1,0}+2\beta u^{n}_{1,1}\\ \beta u^{n}_{1,0}+ (1-2\beta)u^{n}_{1,1}+\beta u^{n}_{1,2}\\ (1-2\beta)u^{n}_{1,2}+2\beta u^{n}_{1,1}\\
-        (1-2\beta)u^{n}_{2,0}+2\beta u^{n}_{2,1}\\ \beta u^{n}_{2,0}+ (1-2\beta)u^{n}_{2,1}+\beta u^{n}_{2,2}\\(1-2\beta)u^{n}_{2,2}+2\beta u^{n}_{2,1}
-       \end{array}\right)\label{ADI_vectors_step1} \\
- \mathbf{u}^{n+1} = 
-  \left(\begin{array}{c}
-        u^{n+1}_{0,0}\\u^{n+1}_{0,1}\\u^{n+1}_{0,2}\\
-        u^{n+1}_{1,0}\\u^{n+1}_{1,1}\\u^{n+1}_{1,2}\\
-        u^{n+1}_{2,0}\\u^{n+1}_{2,1}\\u^{n+1}_{2,2}
-       \end{array}\right)\text{,}\;
- \mathbf{f}_2 = 
-  \left(\begin{array}{c}
-        (1-2\alpha)u^{n+1/2}_{0,0}+2\alpha u^{n+1/2}_{1,0}\\(1-2\alpha)u^{n+1/2}_{0,1}+2\alpha u^{n+1/2}_{1,1}\\(1-2\alpha)u^{n+1/2}_{0,2}+2\alpha u^{n+1/2}_{1,2}\\
-         \alpha u^{n+1/2}_{2,0}+ (1-2\alpha)u^{n+1/2}_{1,0}+\alpha u^{n+1/2}_{0,0} \\ \alpha u^{n+1/2}_{2,1}+ (1-2\alpha)u^{n+1/2}_{1,1}+\alpha u^{n+1/2}_{0,1}\\
-         \alpha u^{n+1/2}_{2,2}+ (1-2\alpha)u^{n+1/2}_{1,2}+\alpha u^{n+1/2}_{0,2}\\(1-2\alpha)u^{n+1/2}_{1,0}+2\alpha u^{n+1/2}_{2,0}\\
-	  (1-2\alpha)u^{n+1/2}_{1,1}+2\alpha u^{n}_{2,1}\\ (1-2\alpha)u^{n+1/2}_{1,2}+2\alpha u^{n+1/2}_{2,2}
-       \end{array}\right)\label{ADI_vectors_step2}
-\end{align}
-
-If we express the two timesteps as we have done in eq. \ref{} we can show that the ADI scheme is simply the 2d Crank Nicholson scheme with a correction term. 
-\begin{align}
- (1-\frac{D\Delta t}{2}D_xD_x)u^{n+1/2} = (1+\frac{D\Delta t}{2} D_yD_y)u^n\\
-  (1-\frac{D\Delta t}{2} D_yD_y)u^{n+1} = (1+\frac{D\Delta t}{2} D_xD_x)u^{n+1/2}
-\end{align}
-Subtracting the two equations gives us
-\begin{equation}
- 2u^{n+1/2} = (1+\frac{D\Delta t}{2}D_yD_y)u^{n} - (1-\frac{D\Delta t}{2}D_yD_y)u^{n+1}
-\end{equation}
-Which, inserted in eq \ref{} again gives us
-
-\begin{equation}
- \frac{1}{2}(D_xD_x+D_yD_y)(u^{n+1}+u^n) = \frac{u^{n+1}-u^n}{\Delta t} +\frac{\Delta t}{4}D_xD_xD_yD_y(u^{n+1}-u^{n})
-\end{equation}
-This is obviously just the CN-scheme in 2d with a correction term of $\frac{\Delta t}{4}D_xD_xD_yD_y(u^{n+1}-u^{n})$. 
-The correction term is of order $\mathcal{O}(\Delta t^2)$, and we know the CN scheme to be of the same order. Implementing the scheme to second order is another story, however.
-\subsubsection{Generalizing the ADI scheme}
-We would, of course, also like to generalize the ADI scheme in order to do convection diffusion and support anisotropic diffusion. The first part is simple. All we need to do is to use the first order derivative approximation mentioned in chapter \ref{}, and remember that we are advancing the x-derivative in time first, and then the y-derivative. Everything will stay the same as earlier, except $\alpha$ and $\beta$ which will be slightly modified.
-\begin{equation}
- \alpha = \frac{D\Delta t}{2\Delta x^2}+\frac{v\Delta t}{\Delta x}\text{,}\;\;  \beta = \frac{D\Delta t}{2\Delta y^2}+\frac{v\Delta t}{\Delta y}
-\end{equation}
-The diagonal of the matrix will not have the first order derivative term!\\
-If we look only at the implicit part of the first step (that is the x-direction) for the anisotropic diffusion equation without the convection term (we can simply add this afterwards) we can find the new matrix-entries. 
-The interesting part of the scheme is
-\begin{equation*}
- u^{n+1/2}_{ij} -\frac{\Delta t}{\Delta x^2}\left( u^{n+1/2}_{i+1j}(D_{i+1j}+D_{ij}) - u^{n+1/2}_{ij}(D_{i+1}+2D_{ij}+D_{i-1j}) + u^{n+1/2}_{i-1j}(D_{ij}+D_{i-1j})\right) 
-\end{equation*}
-which makes the matrix-entries 
-\begin{align*}
- c &= \frac{\Delta t}{\Delta x^2}(D_{i+1j}+D_{ij})\\
- b &= 1+\frac{\Delta t}{\Delta x^2}(D_{i+1}+2D_{ij}+D_{i-1j})\\
- a &= \frac{\Delta t}{\Delta x^2}(D_{i-1j}+D_{ij})
-\end{align*}
-As opposed to the simple case, we notice that the diagonal of the matrix will also be changing in order to accommodate boundary conditions.
-
 \subsection{Backward Euler scheme in 2D}
 
 Using the BE discretization on the simple 2D diffusion equation will yield the general scheme in equation \ref{general_scheme_BE2D}.
@@ -152,10 +44,35 @@ while the first equation produced by the linear system in the $4\times4$ case is
 \end{equation}
 which is an equation that will never be produced by the BE scheme. 
 In the $3\times3$ grid-case the off-diagonal matrix entries with $\alpha$ are on the third column before and after the diagonal. 
-<<<<<<< HEAD
-Moving the corresponding entries to the fourth column in the $4\times4$ case, and similarly to the n'th column in the $n\times n$ case will fix the problem, but also increase the complexity of the matrix seeing as it will be $n+2$ band diagonal.
-=======
-Moving the corresponding entries to the fourth column in the $4\times4$ case, and similarly to the n'th column in the $n\times n$ case will fix the problem, but also increase the complexity of the matrix seeing as it will be $n+2$ band diagonal.
+
+Moving the corresponding entries to the fourth column in the $4\times4$ case, and similarly to the n'th column in the $n\times n$ case will fix the problem, but also increase the complexity of the matrix seeing as it will be $n+2$ band diagonal.\\
+Extending the model to three spatial dimensions gives a very similar matrix to the 2d-case. 
+
+\begin{align}\label{BE3D_linear_system}
+  \left(\begin{array}{c c c c c c c c c}
+        D_{00} & -2\beta I &0 &-2\alpha I &0 &0 &0 &0 &0\\
+        -\beta I & D_{01} & -\beta I &0 &-2\alpha I &0 &0 &0 &0\\
+        0&\ddots & \ddots & 0 & 0 & \ddots &0&0&0\\
+        -\alpha I& 0&0 & D_{10} & -2\beta I& 0 & -\alpha I &0&0\\
+        0& \ddots&0&\ddots & \ddots & \ddots & 0 & \ddots &0\\
+        0& 0 &0 &-2\alpha I &0&0 & D_{n0} & -2\beta I&0\\
+        0& 0 &0 &0 &\ddots&0&\ddots & \ddots &\ddots\\
+         0&0 &0 &0&0 &-2\alpha I&0&-2\beta I & D_{nn}
+       \end{array}\right)
+       \left(\begin{array}{c}
+             u^{n+1}_{00k}\\
+             u^{n+1}_{01k}\\
+             \dots\\
+             u^{n+1}_{10k}\\
+             \dots\\
+             u^{n+1}_{n0k}\\
+             \dots\\
+             u^{n+1}_{nnk}
+             \end{array}\right) = \mathbf{u}^{n}
+\end{align}
+In equation \ref{BE3D_linear_system} $I$ denotes the $n\times n$ identity, $D_{ij}$ denotes the tridiagonal $n\times n$ matrix with entries similar to the ones in eq. \ref{general_scheme_BE2D}, and off-diagonal entries similar to the ones in eq. \ref{general_scheme_BE2D}. 
+All $0$'s denote the $n\times n$ zero-matrix. The values $\alpha$ and $\beta$ are the relevant coefficient matrices for the calculations in question. These will be diagonal as well (or simly numbers in the isotropic case). 
+Note also that the vector entries $u^{n+1}_{ijk}$ are column vectors, making the vector $\mathbf{u}^{n+1}$ have the shape $1\times n^3$.
 
 \subsection{Tridiagonal Gaussian Elimination}
 
@@ -195,4 +112,7 @@ through the well known Gaussian elimination scheme until we have an upper triang
 \lstinputlisting{Figures/tridiag.cpp}
 % \caption{Algorithm for Gaussian elimination of a tridiagonal linear system.}
 % \label{tridiag}
->>>>>>> 5c5037ade39e1aacd97e655ab856f7981aebbe61
+
+\section{LU decomposition}
+
+Something
