started experimenting with block-tridiagonal solver for implicit schemes

--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -21,7 +21,13 @@ To investigate the error we are introducing we will first need to test that the 
  \caption[Initial condition in 1d]{Initial condition of manufactured solution in 1d and the simulation.}
  \label{initial_condition_1d}
 \end{figure}
-
+\begin{figure}[H]
+ \centering
+%  \includegraphics[scale=0.7]{/home/fredriep/Dropbox/uio/thesis/doc/results/experiment_31102013_1017/results/initial_condition.eps}
+ \includegraphics[scale=0.7]{Figures/InitialCondition2d.eps}
+ \caption[Initial condition in 2d]{Initial condition of manufactured solution in 2d and the simulation.}
+ \label{initial_condition_2d}
+\end{figure}
 \subsection{The error estimate}
 Before we do anything we should specify what we use to measure the error. 
 Throughout this thesis the term error is used quite lazily, but unless something else is specified we refer to the expression 
