fixed the MapAreaToIndex - method in combine, added MakeMovie functionality to python-script, still not solved convergence issue

--- a/latex/analysis.tex
+++ b/latex/analysis.tex
@@ -137,7 +137,7 @@ The expected value of r is approximately 1. The result is not perfect, but still
 
 
 
-\subsection{Exact numerical solution}
+\subsection{Exact numerical solution}\label{exact_numerical_solution}
 
 The FE scheme also has an exact solution seeing as it is in fact a difference equation. 
 We can find this (for this exact initial condition \ref{initial_condition_1d}) if we formulate the scheme as 
